2010-09-29  John W. Eaton  <jwe@octave.org>

	* DLD-FUNCTIONS/__glpk__.cc (F__glpk__): Use octave_scalar_map
	instead of Octave_map.
	(OCTAVE_GLPK_GET_REAL_PARAM, OCTAVE_GLPK_GET_INT_PARAM):
	Update for octave_scalar_map.

2010-09-29  John W. Eaton  <jwe@octave.org>

	* DLD-FUNCTIONS/amd.cc (Famd): Use octave_scalar_map instead of
	Octave_map.
	* DLD-FUNCTIONS/cellfun.cc (get_output_list): Likewise.

2010-09-29  John W. Eaton  <jwe@octave.org>

	* DLD-FUNCTIONS/dispatch.cc (Fdispatch): Use octave_scalar_map
	instead of Octave_map.
	* DLD-FUNCTIONS/fltk_backend.cc (plot_window::handle): Likewise.
	* DLD-FUNCTIONS/regexp.cc (octregexp): Likewise.

2010-09-29  John W. Eaton  <jwe@octave.org>

	* DLD-FUNCTIONS/eigs.cc (Feigs): Use octave_scalar_map instead
	of Octave_map.

2010-09-29  John W. Eaton  <jwe@octave.org>

	* DLD-FUNCTIONS/getpwent.cc (mk_pw_map): Use octave_scalar_map
	instead of Octave_map.
	* DLD-FUNCTIONS/getgrent.cc (mk_gr_map): Likewise.
	* DLD-FUNCTIONS/getrusage.cc (Fgetrusage): Likewise.

2010-09-29  John W. Eaton  <jwe@octave.org>

	* DLD-FUNCTIONS/time.cc (intfield, stringfield): New functions.
	(mk_tm_map, extract_tm): Arg is now octave_scalar_map instead of
	Octave_map.
	(extract_tm): Use local intfield and setfield functions.
	(Fmktime, Fstrftime): Use octave_scalar_map instead of Octave_map.

2010-09-28  John W. Eaton  <jwe@octave.org>

	* Cell.h, Cell.cc (Cell::Cell (const std::list<std::string>&)):
	New constructor.

2010-09-28  John P. Swensen  <jpswensen@gmail.com>

	* DLD-FUNCTIONS/__magick_read__.cc (maybe_initialize_magick):
	Warn on initialization of *Magick if QuantumDepth is less than 32.

2010-09-28  John P. Swensen  <jpswensen@gmail.com>

	* DLD-FUNCTIONS/__magick_read__.cc (F__magick_format_list__):
	New function. 

2010-09-28  John P. Swensen  <jpswensen@gmail.com>

	* DLD-FUNCTIONS/__magick_read__.cc (encode_uint_image)
	(encode_bool_image): Ensure bit depth encoding is correct for
	logical, uint8, and uint16 images.
