@@ -1,7 +1,8 @@
 2010-09-29  John W. Eaton  <jwe@octave.org>
 
 	* DLD-FUNCTIONS/__glpk__.cc (F__glpk__): Use octave_scalar_map
-	instead of Octave_map.
+	instead of Octave_map.  Use scalar values where appropriate in
+	call to glpk.
 	(OCTAVE_GLPK_GET_REAL_PARAM, OCTAVE_GLPK_GET_INT_PARAM):
 	Update for octave_scalar_map.
 
